@@ -129,7 +129,7 @@ module Huberry
           
             define_method "#{attribute}" do
               value = instance_variable_get("@#{attribute}")
-              encrypted_value = read_attribute(encrypted_attribute_name)
+              encrypted_value = send(encrypted_attribute_name.to_s)
               original_options = [:key, :if, :unless].inject({}) do |hash, option|
                 hash[option] = options[option]
                 options[option] = self.class.send :evaluate_attr_encrypted_option, options[option], self
@@ -146,7 +146,7 @@ module Huberry
                 options[option] = self.class.send :evaluate_attr_encrypted_option, options[option], self
                 hash
               end
-              write_attribute(encrypted_attribute_name, self.class.send("encrypt_#{attribute}".to_sym, value))
+              send("#{encrypted_attribute_name}=".to_sym, self.class.send("encrypt_#{attribute}".to_sym, value))
               options.merge!(original_options)
               instance_variable_set("@#{attribute}", value)
             end
